# Vertice360

./: .gitignore  package-lock.json  pnpm-lock.yaml  pnpm-workspace.yaml
SrvRestAstroLS_v1/backend/: README.md  diagnostic_test.py  globalVar.py  implementar_seguridad.sh  informe_kimi_2026-02-09_14-30.md  ls_iMotorSoft_Srv01.py  ls_iMotorSoft_Srv01_demo.py  pyproject.toml  temp1.txt  test_flow_changes.py  test_integration_flow.py  test_regression_once_bug.py  test_zona_ambientes_flow.py  verify_gupshup_config.sh
SrvRestAstroLS_v1/backend/db/: __init__.py  demo_pozo360_data.py  demo_project_knowledge_schema.sql  demo_project_profile_schema.sql  demo_vertice360_data.py  placeholders.py
SrvRestAstroLS_v1/backend/docs/: 2026-02-19_informe_estado_vertice360_orquestador.md  2026-02-28_2320_informe_orquestador.md  config_globalVar_2026-02-12_0936.md  definicion_contextos_modulos_demos_2026-02-16_10-41-50.md  demo_vertice360_orquestador_db.md  diagnostico_whatsapp_gupshup_studio_2026-02-10_1425Z.md  gupshup_env_aliasing.md  gupshup_webhook_e2e.md  inbound_router_mode.md  informe_conexion_db_fuera_sandbox_2026-02-24_215155Z.md  informe_conexion_db_fuera_sandbox_2026-02-27_153313Z.md  informe_estado_actual_2026-02-22_2204.md  informe_gupshup_2026_02_08.md  informe_gupshup_studio_dev_2026_02_09.md  informe_seguridad_2026-02-12_1836.md  messaging_meta_whatsapp.md  operativa_conectividad_db.md  operativa_limpieza_db_pruebas_2026-03-02_153019Z.md  operativa_migracion_db_v360_prod_2026-03-09_1556_-03.md  operativa_nginx_demo_vertice360_alias_2026-03-09_1845_-03.md  orquestador_admin_tools.md  pr_summary_run_ok_gushup_studio_dev.md  produccion_runbook_2026-03-06_1218_-03.md  report_2026-02-19_globalvar_strict_audit.md  session_2026-01-09_1151.md  session_2026-01-11_1544.md  session_2026-01-11_2338.md  session_2026-01-15_2237.md  session_2026-01-16_1456.md  session_2026-01-18_2237.md  session_2026-01-22_0856.md  session_2026-01-22_2042.md  session_2026-01-23_1713.md  session_2026-02-02_013919.md  session_2026-02-06_1530.md  session_2026-02-13_13-00-57.md  (+11 more)
(+302 files in other folders)
