[project]
name = "vertice360-backend"
version = "0.1.0"
description = "Backend service for Vertice360 built with Litestar."
requires-python = ">=3.12"
dependencies = [
    "litestar",
    "pydantic",
    "jsonschema",
    "httpx",
    "pytest",
    "uvicorn",
    "openai>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["modules", "routes", "models", "services", "middleware", "db"]
include = ["globalVar.py", "ls_iMotorSoft_Srv01.py"]
